--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="description" content="se calculan las unidades kelvin, farenhaith y celcius"/>
         <meta name="theme-color" content="#000000" />
         <link rel="stylesheet" href="css/converter.css"/>
+        <link rel="manifest" href="manifest.json"/>
     </head>
     <body>
         <h1>Convertidor de temperatura</h1>
@@ -17,21 +18,25 @@
             <input type="text" id="input-temp" name="input-temp" value="20" />
             <label for="input-unit">De</label>
             <select id="input-unit" name="input-unit">
-                <option value="C" selected>celcius</option>
-                <option value="F" selected>farenhaith</option>
-                <option value="K" selected>Kelvin</option>
+                <option value="c" selected>celcius</option>
+                <option value="f" selected>farenhaith</option>
+                <option value="k" selected>Kelvin</option>
             </select>
             <label for="output-unit">A</label>
             <select id="output-unit" name="output-unit">
-                <option value="C" selected>celcius</option>
-                <option value="F" selected>farenhaith</option>
-                <option value="K" selected>Kelvin</option>
+                <option value="c" selected>celcius</option>
+                <option value="f" selected>farenhaith</option>
+                <option value="k" selected>Kelvin</option>
             </select>
             <output name="output-temp" id="output-temp" for="input-temp input-unit output-unit">68 F</output>
 
         </form>
         <script src="js/converter.js"></script>
-
+        <script>
+            if('serviceWorker' in navigator){
+                navigator.serviceWorker.register('sw.js',{scope: './'});
+            }
+        </script>
 
         <nav>
         </nav>
