--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <button name="btn_notificar" id="btn_notificar" onclick="requestNotificationPermission()">Mostrar Notificación</button>
         <button name="btn_buscarme" id="btn_buscarme" onclick="geolocalizacion()">Buscarme</i></button>
         <button name="recording-button" id="recording-button" onclick="recordVideo()"><i class="fa fa-circle"></i></button>
+        <video class="animate done" controls="true" id="video-element"></video>
         <a href="" id="ir_mapa"></a>
         <script src="js/converter.js"></script>
         <script src="js/scripts.js"></script>
